# pg-fort

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.copy  LICENSE  README.md  docker-compose.debug.yml  docker-compose.devcontainer.yml  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
acl-schema/: 20220817221633-initial.sql  dbconfig.yml
demo/: 001_define_demo_schema.sql  002_create_access_rules.sql  003_review_access_rules.sql  004_populate_demo_data.sql  005_create_role_bindings.sql  006_cleanup.sql  006_demo.sql  007_cleanup.sql
fanout-service/: CMakeLists.txt  Dockerfile
fanout-service/.devcontainer/: devcontainer.json
fanout-service/src/lib/common/: CMakeLists.txt
fanout-service/src/lib/common/include/common/: error.h
fanout-service/src/lib/conn/: CMakeLists.txt  pqxx-conn.cpp
fanout-service/src/lib/conn/include/conn/: pqxx-conn.h
fanout-service/src/lib/persistent-deque/: CMakeLists.txt  persistent-deque.cpp
fanout-service/src/lib/persistent-deque/include/persistent-deque/: persistent-deque.h
fanout-service/tests/: CMakeLists.txt  persistent-deque-test.cpp
fanout-service/tests/sql/: deque-experiment.sql
postgresql-proxy/: Dockerfile
postgresql-proxy/.devcontainer/: devcontainer.json
postgresql-proxy/src/lib/common/include/common/: error.h  logging.h
postgresql-proxy/src/lib/conn/: CMakeLists.txt  pqxx-conn.cpp
postgresql-proxy/src/lib/conn/include/conn/: client-conn.h  conn.h  request.h  server-conn.h
postgresql-proxy/src/lib/proxy-server/: CMakeLists.txt  proxy-server.cpp
postgresql-proxy/src/lib/proxy-server/include/proxy-server/: proxy-server.h
postgresql-proxy/src/lib/query/: CMakeLists.txt  proxy-command.cpp  query-acler.cpp
postgresql-proxy/src/lib/query/include/query/: proxy-command.h  query.h
postgresql-proxy/src/lib/schema/: schema-tracker.cpp
postgresql-proxy/src/lib/schema/include/schema/: schema-tracker.h
postgresql-proxy/src/lib/session/: session-operator.cpp
postgresql-proxy/src/lib/session/include/session/: session.h
postgresql-proxy/tests/: CMakeLists.txt  blocking-queue-test.cpp  hello-test.cpp  pqxx-test.cpp  proxy-command-test.cpp  query-test.cpp  state-machine-pool-test.cpp  state-machine-test.cpp
postgresql-proxy/tests/sql/: fk_research.sql  rls_research.sql
schema/: 20220817221633-initial.sql  Dockerfile  dbconfig.yml
src/lib/common/: CMakeLists.txt
src/lib/common/include/common/: error.h  exceptions.h  logging.h  macros.h
src/lib/concurrency/: CMakeLists.txt  thread-pool.cpp
src/lib/concurrency/include/concurrency/: blocking-queue.h  job.h  thread-pool.h
src/lib/conn/: CMakeLists.txt  buffer.cpp  client-conn.cpp  db-conn.cpp  dbconn.cpp  pqxx-conn.cpp  server-conn.cpp
src/lib/conn/include/conn/: buffer.h  client-conn.h  conn.h  db-conn.h  dbconn.h  pqxx-conn.h  request.h  response.h  server-conn.h
src/lib/persistent-deque/: CMakeLists.txt  persistent-deque.cpp
src/lib/persistent-deque/include/persistent-deque/: persistent-deque.h
src/lib/proxy-server/: CMakeLists.txt  proxy-server.cpp
src/lib/proxy-server/include/proxy-server/: proxy-server.h
src/lib/query/: CMakeLists.txt  proxy-command.cpp  query-acler.cpp  query.cpp  special-query.cpp
src/lib/query/include/query/: join_expr.tpl  jsonutil.h  proxy-command.h  query-acler.h  query.h  special-query.h
src/lib/schema/: CMakeLists.txt  schema-tracker.cpp
src/lib/schema/include/schema/: schema-tracker.h
src/lib/session/: CMakeLists.txt  plugin.cpp  print-info.cpp  session-operator.cpp  session-pool.cpp  session.cpp
src/lib/session/include/session/: session-operator.h  session-pool.h  session.h
src/lib/state-machine/: CMakeLists.txt
src/lib/state-machine/include/state-machine/: state-machine.h
tests/: CMakeLists.txt  blocking-queue-test.cpp  error-test.cpp  hello-test.cpp  pg-query-manip.cpp  pg-query-test.cpp  pqxx-test.cpp  proxy-command-test.cpp  query-test.cpp  state-machine-pool-test.cpp  state-machine-test.cpp  vector-test.cpp
tests/sql/: 00_experiment.sql  01_types.sql  02_sequences.sql  03_tables.sql  04_indexes.sql  05_views.sql  06_functions.sql  07_aggregates.sql  08_triggers.sql  09_populate.sql  10_authorizations.sql  binding_test.sql  fk_research.sql  rls_research.sql
